--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
           </div>
         </div>
       </div>
+      <p>Source from <a href="https://newsapi.org/">News API</a></p>
     </section>
+
     <script
     src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
